Added fat jar during build

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,22 @@
           <target>${jdk.version}</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring.boot.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <mainClass>com.interview.WorkflowManagerApp</mainClass>
+          <layout>ZIP</layout>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
