--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.interview</groupId>
+  <groupId>com.alwjeflkajwelkf</groupId>
   <artifactId>workflow-manager</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -84,7 +84,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>com.interview.WorkflowManagerApp</mainClass>
+          <mainClass>com.alwjeflkajwelkf.WorkflowManagerApp</mainClass>
           <layout>ZIP</layout>
         </configuration>
       </plugin>
